--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,33 @@
-name: Build APK for Android
+name: Build APK
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          python3-pip python3-dev build-essential \
-          libffi-dev libssl-dev zlib1g-dev \
-          libjpeg-dev libpng-dev libfreetype6-dev \
-          openjdk-17-jdk
-        pip install --upgrade pip
-        pip install buildozer
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y \
+            python3-pip python3-dev build-essential \
+            libffi-dev libssl-dev zlib1g-dev \
+            libjpeg-dev libpng-dev libfreetype6-dev \
+            openjdk-17-jdk
+          pip install --upgrade pip
+          pip install buildozer
 
-    - name: Build APK
-      run: |
-        buildozer android debug
+      - name: Build APK
+        run: buildozer android debug
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v2
-      with:
-        name: BearGoesRacing.apk
-        path: bin/*.apk
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: BearGoesRacing.apk
+          path: bin/*.apk
